# jaffle-shop

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
