[tool.poetry]
name = "jaffle-shop dbt example with devcontainer and poetry set up"
version = "0.1.0"
description = ""
authors = ["Alexis G <alexis@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
dbt-duckdb = {version = "1.7.2", extras = ["md"]}
pre-commit = "^3.6.0"
sqlfluff = "^2.3.5"
sqlfluff-templater-dbt = "^2.3.5"
